# Mototherapy

./: .env.example  README.md  manage.py  pyproject.toml
mainapp/: admin.py  models.py  serializers.py  views.py
mainapp/migrations/: 0001_initial.py
moto/: asgi.py  settings.py  urls.py  wsgi.py
